--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@ $danger: #dc2626;
 $dangerDark: #dc26268e;
 $gray: #6b7280;
 $grayDark: #4c515b;
+
 $font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
@@ -44,6 +45,10 @@ body {
   border: none;
   cursor: pointer;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 .transparent {
@@ -121,7 +126,7 @@ body {
 
   &__title {
     background-color: transparent;
-    width: 100%;
+    width: 90%;
     padding: 16px;
     font-weight: 700;
     font-size: 20px;
@@ -314,6 +319,36 @@ body {
     display: flex;
     gap: 4px;
     align-items: center;
+
+    &--between {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+  }
+
+  &__follow-btn {
+    @extend .button;
+    background-color: $white;
+    color: $activeBorder;
+
+    &:hover,
+    &:focus {
+      background-color: $activeBorder;
+      color: $white;
+    }
+  }
+
+  &__following-btn {
+    @extend .button;
+    background-color: $activeBorder;
+    color: $white;
+
+    &:hover,
+    &:focus {
+      background-color: $white;
+      color: $activeBorder;
+    }
   }
 
   &__email,
@@ -362,6 +397,7 @@ body {
 
         &.post__delete {
           background-color: $danger;
+
           &:hover,
           &:focus {
             background-color: $dangerDark;
@@ -370,9 +406,11 @@ body {
 
         &.post__edit {
           background-color: $gray;
+
           a {
             background-color: transparent;
           }
+
           &:hover,
           &:focus {
             background-color: $grayDark;
@@ -382,6 +420,7 @@ body {
         &.post__likes,
         &.post__comments {
           @extend .post__flex;
+
           &:hover,
           &:focus {
             color: $gray;
